--- a/themes/InterDead/layouts/index.html
+++ b/themes/InterDead/layouts/index.html
@@ -70,14 +70,22 @@
         <div class="gm-hero__media gm-card">
           <div class="gm-card__stamp gm-card__stamp--demo" data-show="demo">{{ i18n "card.stamp.demo" }}</div>
           <div class="gm-hero__logoFrame" data-hero-media>
-            {{- $logoAsset := .Scratch.Get "interdeadLogo" -}}
+            {{- $page := . -}}
+            {{- $logoAsset := $page.Scratch.Get "interdeadLogo" -}}
             {{- if not $logoAsset -}}
               {{- with resources.Get "images/logo.png" -}}
                 {{- $logoAsset = . | fingerprint -}}
+                {{- $page.Scratch.Set "interdeadLogo" $logoAsset -}}
               {{- end -}}
             {{- end -}}
             {{- $logoSrc := cond $logoAsset $logoAsset.RelPermalink ("assets/images/logo.png" | relURL) -}}
-            <img src="{{ $logoSrc }}" alt="{{ i18n "meta.ogImageAlt" }}" class="gm-hero__logoImage" />
+            {{- $logoIntegrity := cond $logoAsset $logoAsset.Data.Integrity "" -}}
+            <img
+              src="{{ $logoSrc }}"
+              alt="{{ i18n "meta.ogImageAlt" }}"
+              class="gm-hero__logoImage"
+              {{- if $logoIntegrity }} integrity="{{ $logoIntegrity }}" crossorigin="anonymous"{{ end -}}
+            />
           </div>
         </div>
       </div>
