--- a/themes/InterDead/layouts/index.html
+++ b/themes/InterDead/layouts/index.html
@@ -70,7 +70,7 @@
           <div class="gm-hero__media gm-card">
             <div class="gm-card__stamp gm-card__stamp--demo" data-show="demo">{{ i18n "card.stamp.demo" }}</div>
             <div class="gm-hero__logoFrame" data-hero-media>
-              {{- $logo := resources.Get "images/logo.png" | fingerprint -}}
+              {{- $logo := resources.Get "images/logo_png.png" | fingerprint -}}
               <img
                 src="{{ $logo.RelPermalink }}"
                 alt="{{ i18n "meta.ogImageAlt" }}"
