--- a/themes/InterDead/layouts/profile/list.html
+++ b/themes/InterDead/layouts/profile/list.html
@@ -30,6 +30,9 @@
               <div class="gm-profile__row">
                 <dt class="gm-profile__label" data-i18n="profile.fields.profileId">{{ i18n "profile.fields.profileId" }}</dt>
                 <dd class="gm-profile__value" data-profile-id></dd>
+                <button class="gm-button gm-button--danger gm-profile__delete" data-profile-delete data-i18n="profile.delete">
+                  {{ i18n "profile.delete" }}
+                </button>
               </div>
             </dl>
           </div>
