--- a/themes/InterDead/layouts/partials/footer.html
+++ b/themes/InterDead/layouts/partials/footer.html
@@ -1,8 +1,11 @@
 <footer class="gm-footer" id="offer">
   <div class="gm-container">
+    {{- $fandomLinks := dict "en" "https://interdead.fandom.com/wiki/InterDead_Wiki" "ru" "https://interdead.fandom.com/ru/wiki/Interdead_%D0%92%D0%B8%D0%BA%D0%B8" "uk" "https://interdead.fandom.com/uk/wiki/InterDead_Wiki" "ja" "https://interdead.fandom.com/ja/wiki/InterDead_Wiki" -}}
+    {{- $fandomURL := default (index $fandomLinks "en") (index $fandomLinks .Site.Language.Lang) -}}
     <div class="gm-footer__inner">
       <div class="gm-footer__note" data-show="adult">
         <p class="gm-text--fine">{{ i18n "footer.adult" }}</p>
+        <p class="gm-text--fine">{{ i18n "footer.note" }}</p>
       </div>
       <div class="gm-footer__links">
         <div class="gm-footer__linkGroup">
@@ -26,6 +29,13 @@
           <span class="gm-footer__linkLabel">{{ i18n "footer.links.media" }}</span>
           <a
             class="gm-footer__link"
+            href="{{ $fandomURL }}"
+            target="_blank"
+            rel="noopener"
+            >Fandom</a
+          >
+          <a
+            class="gm-footer__link"
             href="https://discord.gg/vAWYg3jFEp"
             target="_blank"
             rel="noopener"
@@ -44,7 +54,7 @@
           {{- end -}}
         </div>
       </div>
-      <p class="gm-text--fine gm-footer__disclaimer">{{ i18n "footer.note" }}</p>
+      {{ partial "components/promo-links.html" (dict "Context" . "Modifier" "gm-promos--footer") }}
     </div>
   </div>
 </footer>
